lab1/greeting-app/k8s/deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
    namespace: default
    name: greeting-app
    labels:
        app: greeting-app
spec:
    replicas: 1
    selector:
        matchLabels:
            app: greeting-app
    template:
        metadata:
            labels:
                app: greeting-app
        spec:
            containers:
                - name: greeting-app
                  image: jeanmorais/greeting-app:latest
                  ports:
                      - containerPort: 8080
                        name: greeting-svc
                  imagePullPolicy: Always
                  resources:
                      requests:
                          cpu: 100m
                          memory: 50Mi
                      limits:
                          cpu: 200m
                          memory: 100Mi
